@@ -2,6 +2,9 @@
    * Fixed problem related to fetching images from Network camera and error
      handling when it fails. Motion would end in infinite loops (Bill Brack).
      http://www.lavrsen.dk/twiki/bin/view/Motion/BugReport2006x03x10x000151
+   * Improved reporting of thread numbers during startup in setup mode.
+     (Peter Smith and Kenneth Lavrsen)
+     http://www.lavrsen.dk/twiki/bin/view/Motion/SlightlyImprovedThreadCreationLogging
 
 3.2.6 Formal Bugfix Release.
    * Fixed bug where variables time_last_frame and time_current_frame had been
